--- a/libs/pgvec_textsearch/pyproject.toml
+++ b/libs/pgvec_textsearch/pyproject.toml
@@ -77,6 +77,7 @@ markers = [
     "asyncio: mark tests as requiring asyncio",
     "compile: mark placeholder test used to compile integration tests without running them",
 ]
+testpaths = ["tests"]
 
 [tool.ruff]
 line-length = 100
